src/core/config/config_module/snapshots/tailcall__core__config__config_module__merge__tests__enums_invalid.snap
---
source: src/core/config/config_module/merge.rs
expression: merged.unwrap_err()
---
Validation Error
• Enum is used as input type in one subgraph and output type in another [enumOutput]
