src/core/config/config_module/snapshots/tailcall__core__config__config_module__merge__tests__federation_router.snap
---
source: src/core/config/config_module/merge.rs
expression: merged.to_sdl()
---
schema @server(port: 8000) @upstream(batch: {delay: 100, headers: []}, httpCache: 42) {
  query: Query
}

input CommentInput {
  body: String!
  userId: Int!
}

interface Post {
  body: String
  id: Int!
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

enum CommentSearch {
  MONTH
  WEEK
}

enum Role {
  ADMIN
  EMPLOYEE
  USER
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  role: Role
  username: String!
  website: String
}

type Query {
  addComment(postId: Int!, comment: CommentInput!): Boolean @http(url: "http://jsonplaceholder.typicode.com/add-comment", method: "POST")
  posts: [UserPost] @http(url: "http://jsonplaceholder.typicode.com/posts")
  searchComments(type: CommentSearch): [Comment] @http(url: "http://jsonplaceholder.typicode.com/comment")
  user(id: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
  version: String @expr(body: "test")
}

type UserPost implements Post {
  body: String
  id: Int!
  title: String
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Comment {
  body: String
}
