src/core/config/config_module/snapshots/tailcall__core__config__config_module__merge__tests__types_invalid.snap
---
source: src/core/config/config_module/merge.rs
expression: merged.unwrap_err()
---
Validation Error
• Type mismatch: expected `String`, got `Int` [A, a]
• Type mismatch: expected list, got singular value [A, b]
