src/core/config/config_module/snapshots/tailcall__core__config__config_module__merge__tests__types_valid.snap
---
source: src/core/config/config_module/merge.rs
expression: merged.to_sdl()
---
schema @server @upstream {
  query: Query
}

type A {
  a: String
  b: Int
  c: Boolean
  d: Float!
  e: String
}

type Query {
  a: A
}
